<resources>
    <string name="app_name">AlarmAvispa</string>
    <string name="information">Información</string>
    <string name="notifySighting">Avisar</string>
    <string name="sighting">Avistamientos</string>
    <string name="traps">Trampas</string>
    <string name="imageHornetLogo">Imagen de una avispa asiática</string>
    <string name="labelButtonPhotoFragmentNotify">¡Fotografíame!</string>
    <string name="labelButtonGalleryFragmentNotify">¡Selecciónala desde tu galería!</string>
    <string name="nav_drawer_menu_option_login">Iniciar sesión</string>
    <string name="nav_drawer_menu_option_profile">Mi Perfil</string>
    <string name="nav_drawer_menu_option_change_password">Cambiar contraseña</string>
    <string name="nav_drawer_menu_option_close_session">Cerrar sesión</string>
    <string name="help">Ayuda</string>
    <string name="nav_drawer_menu_option_about">Acerca De</string>
    <string name="nav_drawer_menu_option_contact">Contacto</string>
    <string name="nav_drawer_menu_option_lopd_and_privacy">Política de Privacidad y LOPD</string>
    <string name="nav_drawer_menu_option_terms_and_conditions">Términos y Condiciones de Uso</string>
    <string name="nav_drawer_menu_option_web">Web de la aplicación</string>
    <string name="loginActivityLabel">Identifícate en AlarmAvispa</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="labelPasswordForgotten">¿Has olvidado tu contraseña?</string>
    <string name="labelNewInAlarmAvispa">¿Eres nuevo en AlarmAvispa?</string>
    <string name="labelBtnRegister">Regístrate</string>
    <string name="verifyingUser">Verificando usuario</string>
    <string name="pleaseWaiting">Por favor espere...</string>
    <string name="messageVerification">Te hemos enviado un enlace a tu email. Por favor, comprueba tu bandeja de entrada: <br /></string>
    <string name="titleDialog">VERIFICACIÓN DE EMAIL</string>
    <string name="buttonVerification">YA HE VERIFICADO</string>
    <string name="error_email_empty">Introduce un email</string>
    <string name="error_invalid_email">Email no válido</string>
    <string name="error_password_empty">Introduce una contraseña</string>
    <string name="error_password_invalid_lenght">Ha de contener al menos 6 caracteres</string>
    <string name="error_password_without_number">Ha de contener un número</string>
    <string name="error_password_without_capital_letter">Ha de contener una letra mayúscula</string>
    <string name="prefs_key_user_email">EMAIL</string>
    <string name="prefs_key_user_id">USERID</string>
    <string name="prefs_key_full_name">FULL_NAME</string>
    <string name="title_dialog_reset_password">RECUPERAR CONTRASEÑA</string>
    <string name="verify_email_reset_password">Comprueba tu email para cambiar la contraseña.</string>
    <string name="error_send_email_reset_password">Ha ocurrido un error al enviar el email para resetear la contraseña.</string>
    <string name="myProfileActivityLabel">Mi Perfil</string>
    <string name="hint_name_profile">Nombre</string>
    <string name="hint_surname_profile">Apellidos</string>
    <string name="hint_idCard_profile">DNI, NIE o pasaporte</string>
    <string name="hint_phone_profile">Teléfono de contacto</string>
    <string name="hint_city_profile">Ciudad</string>
    <string name="hint_province_profile">Provincia</string>
    <string name="labelButtonUpdateProfile">Actualizar Mi Perfil</string>
    <string name="asterisk">*</string>
    <string name="required">* obligatorio</string>
    <string name="changePasswordActivityLabel">Cambiar Contraseña</string>
    <string name="oldPassword">Contraseña actual</string>
    <string name="newPassword">Nueva Contraseña</string>
    <string name="retypeNewPassword">Confirma la nueva contraseña</string>
    <string name="labelButtonChangePassword">Cambiar Contraseña</string>
    <string name="passwordNoMatch">Las contraseñas no coinciden</string>
    <string name="errorChangingPassword">ERROR: No se ha podido cambiar la contraseña!! Por favor, inténtelo más tarde.</string>
    <string name="successChangingPassword">La contraseña ha sido cambiada correctamente!!!.</string>
    <string name="errorAuthenticationFailed">ERROR: Autenticación fallida!!!</string>
    <string name="errorOldNewPasswordMatch">ERROR: La contraseña actual y la nueva coinciden. Por favor, inténtelo de nuevo.</string>
    <string name="registerFragmentLabel">Regístrate en AlarmAvispa</string>
    <string name="labelButtonRegisterMe">REGISTRARME</string>
    <string name="error_name_empty">Introduce tu nombre</string>
    <string name="error_surname_empty">Introduce tus apellidos</string>
    <string name="error_phone_empty">Introduce un teléfono de contacto</string>
    <string name="title_dialog_successful_register">REGISTRADO CON ÉXITO</string>
    <string name="message_dialog_successful_register">Has sido registrado con éxito. Accede a INICIO SESIÓN para entrar en AlarmAvispa con tu email y contraseña.</string>
    <string name="TREE">Árbol</string>
    <string name="BUILDING">Edificación</string>
    <string name="TERRAIN">Terreno</string>
    <string name="PRIMARY_SECONDARY">Primario/Secundario</string>
    <string name="EMBRYONIC">Embrionario</string>
    <string name="HORNET">Avispa</string>
    <string name="NEST">NIDO</string>
    <string name="SOLVED">Resuelto</string>
    <string name="PENDING_VERIFICATION">Pendiente verificación</string>
    <string name="REPORTED">Reportado</string>
    <string name="PENDING_RESOLUTION">Pendiente resolución</string>
    <string name="NOT_INTERVENTION_SIGHTING">No intervención</string>
    <string name="ACTIVE">Activo</string>
    <string name="REMOVED">Ya eliminado</string>
    <string name="INACTIVE">Inactivo</string>
    <string name="NOT_VELUTINA">No velutina</string>
    <string name="NOT_LOCATED">No localizado</string>
    <string name="NOT_INTERVENTION">Sin intervención</string>
    <string name="BIOCIDE_INJECTED">Biocida bombeado</string>
    <string name="BIOCIDE_SPRAYED">Biocida Spray</string>
    <string name="error_reading_firebase">Error leyendo la base de datos</string>
    <string name="addSightingActivityLabel">Añadir Avistamiento</string>
    <string name="addPhotosFragmentLabel">Añadir Fotos</string>
    <string name="requestPermission">Solicitud de permiso</string>
    <string name="justificationPermissionCamera">Sin el permiso de cámara no se pueden tomar fotos</string>
    <string name="justificationPermissionWriteExternaStorage">Sin el permiso de almacenamiento no se podrán guardar fotos ni enviar el avistamiento.</string>
    <string name="appPhotosDirectory">FotosAlarmAvispa</string>
    <string name="error_loading_photo">Error cargando la foto</string>
    <string name="labelMoreImages">¿Más imágenes?</string>
    <string name="labelBtNext">Siguiente</string>
    <string name="place">Lugar (barrio, bosque, carretera, patio,...)</string>
    <string name="labelPlaceSeenNest">¿En qué lugar lo has visto?</string>
    <string name="labelPlaceSeenWasp">¿En qué lugar las has visto?</string>
    <string name="wasps">Avispas</string>
    <string name="nests">Nido</string>
    <string name="labelWhatYouSeen">¿Qué has visto?</string>
    <string name="error_limit_allowed_photos">No puedes adjuntar más de 6 fotos!!!!</string>
    <string name="addLocationFragmentLabel">Dónde estás</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAhSEL1WCAp0_DsXJxyQiRtKqnKOnmpsIk
    </string>
    <string name="labelWhereAreYou">¿En qué localidad estás?</string>
    <string name="commentsLocation">Notas para ayudar a localizarlo</string>
    <string name="locality">Localidad</string>
    <string name="longitude">Longitud</string>
    <string name="latitude">Latitud</string>
    <string name="error_loading_google_map">Error cargando el mapa de Google Maps</string>
    <string name="justificationPermissionLocation">Sin el permiso de localización no se pueden obtener automáticamente
        su localización para registrar el avistamiento; ni ver los ya registrados.</string>
    <string name="error_permission_location_denied">No tiene concedido el permiso de localización. Por favor, concédalo para poder localizarle!!!</string>
    <string name="location_data_extra_not_available">No se ha suministrado una localización al servicio Geocoder y por tanto no puedo averiguar tu localidad.</string>
    <string name="service_not_available">Error: servicio reconocimiento localidad no disponible.</string>
    <string name="invalid_lat_long_used">Error: la latitud o longitud indicadas son erróneas. Por favor, revíselas</string>
    <string name="no_address_found">No se ha encontrado ninguna dirección para esa latitud y longitud</string>
    <string name="address_found">Dirección encontrada</string>
    <string name="error_receiver_not_available">ERROR: no has indicado ningún receptor para recogerlos resultados de la petición de localidad.</string>
    <string name="addDescriptionNestFragmentLabel">Cómo es el nido</string>
    <string name="addWhoAreYoutFragmentLabel">Quién eres</string>
    <string name="labelHowIsTheNest">¿Cómo es el nido?</string>
    <string name="labelNestType">Tipo</string>
    <string name="labelDoubsType">¿No sabes cuál es el tipo?</string>
    <string name="labelHelpDoubsType">Ayuda</string>
    <string name="labelSpNestStand">Selecciona el soporte del nido</string>
    <string name="size_primary_secondary_nest">Tamaño hasta de 1 metro de altura y entre 40 y 80 cm de diámetro.</string>
    <string name="size_embryonic_nest">Tamaño de una pelota de tenis (diámetro menor de 10 cm). Se puede eliminar la reina con un matamoscas.</string>
    <string name="when_embryonic_nest">Suele aparecer a principios de primavera y es temporal.</string>
    <string name="when_primary_secondary_nest">Suele aparecer desde principios de verano hasta otoño y es el definitivo de la colonia.</string>
    <string name="material_embryonic_nest">Construido con una textura parecida al papel maché muy fino.</string>
    <string name="material_primary_secondary_nest">Construido con un material muy rugoso.</string>
    <string name="where_embryonic_nest">En zonas resguardadas de la lluvia y del aire: garajes, cobertizos, aleros, cornisas, agujeros, paredes, suelo,...</string>
    <string name="where_primary_secondary_nest">Sitios altos como árboles.  También pueden aparecer en alguna cornisa y muy ocasionalmente en sebes e incluso en el suelo.</string>
    <string name="entry_embryonic_nest">Tienen la entrada por abajo.</string>
    <string name="entry_primary_secondary_nest">Tienen la entrada por un lateral.</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="terms_conditions">Términos y Condiciones de uso</string>
    <string name="web_app_with_privacy">Web de la aplicación</string>
    <string name="mapSightingFragmentLabel">Avistamientos</string>
    <string name="trapFragmentLabel">Trampas</string>
    <string name="map_sighting_menu_option_annual_charts">Gráficos anuales</string>
    <string name="map_sighting_menu_option_monthly_charts">Gráficos mensuales del año en curso</string>
    <string name="map_sighting_menu_option_municipalities_chart">Gráfico por municipios del año en curso</string>
    <string name="map_sighting_menu_option_municipalities_monthly_chart">Gráfico por municipios del mes actual</string>
    <string name="map_sighting_menu_title_charts">Gráficos</string>
    <string name="chartByMunicipalitiesCurrentYearLabel">Gráfico por municipios del año en curso</string>
    <string name="chartByMunicipalitiesCurrentMonth">Gráfico del mes actual por municipios</string>
    <string name="contactActivityLabel">Contacto</string>
    <string name="about">Acerca de</string>
    <string name="how_use_app">Cómo usar AlarmAvispa</string>
</resources>