<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notifySightingFragment">

    <fragment
        android:id="@+id/notifySightingFragment"
        android:name="es.alejandrtf.alarmavispa.fragments.NotifySightingFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notify_sighting">

        <action
            android:id="@+id/action_notifySightingFragment_to_addSightingActivityDest"
            app:destination="@id/addPhotosActivityDest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_notifySightingFragment_to_mapSightingFragment"
            app:destination="@id/mapSightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_notifySightingFragment_to_trapFragment"
            app:destination="@id/trapFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/informationHornetFragment"
        android:name="es.alejandrtf.alarmavispa.fragments.InformationHornetFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_information_hornet" />
    <fragment
        android:id="@+id/mapSightingFragment"
        android:name="es.alejandrtf.alarmavispa.fragments.MapSightingFragment"
        android:label="@string/mapSightingFragmentLabel"
        tools:layout="@layout/fragment_map_sighting">
        <action
            android:id="@+id/action_mapSightingFragment_to_loginActivityDest"
            app:destination="@id/loginActivityDest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_mapSightingFragment_to_chartByMunicipalitiesCurrentYearDest"
            app:destination="@id/chartByMunicipalitiesCurrentYearDest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_mapSightingFragment_to_chartByMunicipalitiesCurrentMonthDest"
            app:destination="@id/chartByMunicipalitiesCurrentMonthDest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="latitudeCentreMap"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="longitudeCentreMap"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/trapFragment"
        android:name="es.alejandrtf.alarmavispa.fragments.TrapFragment"
        android:label="@string/trapFragmentLabel"
        tools:layout="@layout/fragment_trap">
        <action
            android:id="@+id/action_trapFragment_to_loginActivityDest"
            app:destination="@id/loginActivityDest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/loginActivityDest"
        android:name="es.alejandrtf.alarmavispa.activities.LoginActivity"
        android:label="@string/loginActivityLabel"
        tools:layout="@layout/activity_login">
        <argument
            android:name="fragmentOrigin"
            app:argType="string"
            app:nullable="true" />
    </activity>
    <fragment
        android:id="@+id/closeSessionOptionDest"
        android:name="es.alejandrtf.alarmavispa.fragments.CloseSessionFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_closeSessionOptionDest_to_notifySightingFragment"
            app:destination="@id/notifySightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/lopdFragmentDest"
        android:name="es.alejandrtf.alarmavispa.fragments.LopdPrivacyFragment"
        android:label="@string/privacy_policy">
        <action
            android:id="@+id/action_lopdFragmentDest_to_notifySightingFragment"
            app:destination="@id/notifySightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/termsConditionsFragmentDest"
        android:name="es.alejandrtf.alarmavispa.fragments.TermsConditionsFragment"
        android:label="@string/terms_conditions">
        <action
            android:id="@+id/action_termsConditionsFragment_to_notifySightingFragment"
            app:destination="@id/notifySightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/webAppFragmentDest"
        android:name="es.alejandrtf.alarmavispa.fragments.WebAppFragment"
        android:label="@string/web_app_with_privacy">
        <action
            android:id="@+id/action_webAppFragment_to_notifySightingFragment"
            app:destination="@id/notifySightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragmentDest"
        android:name="es.alejandrtf.alarmavispa.fragments.AboutFragment"
        android:label="@string/about" >
        <action
            android:id="@+id/action_aboutFragment_to_notifySightingFragment"
            app:destination="@id/notifySightingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/notifySightingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/chartByMunicipalitiesCurrentYearDest"
        android:name="es.alejandrtf.alarmavispa.fragments.ChartByMunicipalitiesCurrentYearFragment"
        android:label="@string/chartByMunicipalitiesCurrentYearLabel"
        tools:layout="@layout/fragment_any_chart_view" />
    <fragment
        android:id="@+id/chartByMunicipalitiesCurrentMonthDest"
        android:name="es.alejandrtf.alarmavispa.fragments.ChartByMunicipalitiesCurrentMonthFragment"
        android:label="@string/chartByMunicipalitiesCurrentMonth"
        tools:layout="@layout/fragment_any_chart_view" />
    <activity
        android:id="@+id/myProfileActivityDest"
        android:name="es.alejandrtf.alarmavispa.activities.MyProfileActivity"
        android:label="@string/myProfileActivityLabel"
        tools:layout="@layout/activity_my_profile" />
    <activity
        android:id="@+id/changePasswordActivityDest"
        android:name="es.alejandrtf.alarmavispa.activities.ChangePasswordActivity"
        android:label="@string/changePasswordActivityLabel"
        tools:layout="@layout/activity_change_password" />
    <activity
        android:id="@+id/addPhotosActivityDest"
        android:name="es.alejandrtf.alarmavispa.activities.AddSightingActivity"
        android:label="@string/addSightingActivityLabel"
        tools:layout="@layout/activity_add_sighting">
        <argument
            android:name="photoFileUri"
            app:argType="string" />
    </activity>
    <activity
        android:id="@+id/contactActivityDest"
        android:name="es.alejandrtf.alarmavispa.activities.ContactActivity"
        android:label="@string/contactActivityLabel"
        tools:layout="@layout/activity_contact" />

    <action
        android:id="@+id/action_global_toAddPhotosActivityDest"
        app:destination="@id/addPhotosActivityDest" />
    <action
        android:id="@+id/action_global_toLoginActivityDest"
        app:destination="@id/loginActivityDest"
        app:popUpTo="@+id/notifySightingFragment" />
    <action
        android:id="@+id/action_global_toMapSightingFragmentDest"
        app:destination="@id/mapSightingFragment" />
    <fragment
        android:id="@+id/helpFragmentDest"
        android:name="es.alejandrtf.alarmavispa.fragments.HelpFragment"
        android:label="@string/how_use_app"
        tools:layout="@layout/fragment_help" />


</navigation>